fix: render base chart without ES module

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </style>
 </head>
 <body>
-<div id="chart" style="width:100vw;height:100vh;"></div>
+  <div id="chart" style="width:100vw;height:100vh;"></div>
 
-<script type="module">
-  import { createChart } from 'https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.esm.production.js';
+<script src="https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
 
-  const chart = createChart(document.getElementById('chart'), {
+<script>
+  const chart = LightweightCharts.createChart(document.getElementById('chart'), {
     layout: {
       background: { color: '#0b0e11' },
       textColor: '#cfd3dc',
@@ -30,9 +30,15 @@
       vertLines: { color: '#1e2329' },
       horzLines: { color: '#1e2329' },
     },
+    timeScale: {
+      timeVisible: true,
+      secondsVisible: false,
+    },
   });
 
-  chart.addCandlestickSeries();
+  const candleSeries = chart.addCandlestickSeries();
+
+  console.log('Chart initialized OK');
 </script>
 </body>
 </html>
