refactor: isolate stateEngine as pure logic module and remove direct HTML entry

--- a/index.html
+++ b/index.html
@@ -85,5 +85,5 @@
       });
     };
   </script>
-<script type="module" src="./stateEngine/index.js"></script></body>
+<<script type="module" src="./main.js"></script>></script></body>
 </html>
