--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Super Breakout LIVE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Super Breakout – Live</title>
+
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       background: #0b0e11;
       color: #cfd3dc;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
       font-family: Arial, sans-serif;
+      overflow: hidden;
     }
+
     #status {
       position: absolute;
       top: 10px;
@@ -23,7 +21,20 @@
       border-radius: 6px;
       background: #1e2329;
       font-size: 13px;
+      z-index: 10;
     }
+
+    #state {
+      position: absolute;
+      top: 42px;
+      left: 10px;
+      padding: 6px 10px;
+      border-radius: 6px;
+      background: #1e2329;
+      font-size: 13px;
+      z-index: 10;
+    }
+
     #chart {
       width: 100vw;
       height: 100vh;
@@ -32,13 +43,14 @@
 </head>
 
 <body>
-  <div id="status">Connecting…</div>
+  <!-- UI -->
+  <div id="status">Connecting...</div>
+  <div id="state">STATE: -</div>
   <div id="chart"></div>
 
+  <!-- Chart -->
   <script type="module">
-    import { createChart } from 'https://unpkg.com/lightweight-charts@4.1.0/dist/lightweight-charts.esm.production.js';
-
-    const statusEl = document.getElementById('status');
+    import { createChart } from 'https://unpkg.com/lightweight-charts/dist/lightweight-charts.esm.production.js';
 
     const chart = createChart(document.getElementById('chart'), {
       layout: {
@@ -55,35 +67,10 @@
       },
     });
 
-    const candles = chart.addCandlestickSeries();
-
-    const ws = new WebSocket(
-      'wss://fstream.binance.com/ws/btcusdt@kline_1m'
-    );
-
-    ws.onopen = () => {
-      statusEl.textContent = 'Connected';
-      statusEl.style.background = '#0f5132';
-    };
-
-    ws.onerror = () => {
-      statusEl.textContent = 'WebSocket error';
-      statusEl.style.background = '#842029';
-    };
-
-    ws.onmessage = (e) => {
-      const msg = JSON.parse(e.data);
-      if (!msg.k) return;
-
-      const k = msg.k;
-      candles.update({
-        time: k.t / 1000,
-        open: +k.o,
-        high: +k.h,
-        low: +k.l,
-        close: +k.c,
-      });
-    };
+    chart.addCandlestickSeries();
   </script>
-<<script type="module" src="./main.js"></script>></script></body>
+
+  <!-- APP ENTRY -->
+  <script type="module" src="./main.js"></script>
+</body>
 </html>
